Bharattech/Integrated/Integrated/huly/huly-selfhost/kube/front/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: front
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - env:
            - name: ACCOUNTS_URL
              valueFrom:
                configMapKeyRef:
                  name: huly-config
                  key: ACCOUNTS_URL
            - name: ACCOUNTS_URL_INTERNAL
              value: http://account
            - name: CALENDAR_URL
              value: http://calendar
            - name: COLLABORATOR_URL
              valueFrom:
                configMapKeyRef:
                  name: huly-config
                  key: COLLABORATOR_URL
            - name: DEFAULT_LANGUAGE
              value: en
            - name: ELASTIC_URL
              valueFrom:
                configMapKeyRef:
                  name: huly-config
                  key: ELASTIC_URL
            - name: GMAIL_URL
              value: http://gmail:8088
            - name: STORAGE_CONFIG
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: STORAGE_CONFIG
            - name: MONGO_URL
              valueFrom:
                configMapKeyRef:
                  name: huly-config
                  key: MONGO_URL
            - name: REKONI_URL
              valueFrom:
                configMapKeyRef:
                  name: huly-config
                  key: REKONI_URL
            - name: SERVER_PORT
              value: "8080"
            - name: SERVER_SECRET
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: SERVER_SECRET
            - name: TELEGRAM_URL
              value: http://telegram:8086
            - name: TITLE
              value: Huly Self Hosted
            - name: UPLOAD_URL
              value: /files
            - name: STATS_URL
              value: http://stats
            - name: DESKTOP_UPDATES_CHANNEL
              value: selfhost
          image: hardcoreeng/front:v0.7.426
          name: front
          ports:
            - containerPort: 8080
      restartPolicy: Always
