Bharattech/Integrated/Integrated/huly/huly-selfhost/kube/front/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: front
  name: front
spec:
  ingressClassName: nginx
  rules:
    - host: huly.example
      http:
        paths:
          - backend:
              service:
                name: front
                port:
                  number: 80
            path: /
            pathType: Prefix
